web/ingress.yaml
---
metadata:
  namespace: demo-dev-2
  labels:
    app: demo
  name: web
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: all-apps-ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
spec:
  rules:
  - host: demo-2.pro.dev.boltops.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port:
              number: 80
